workspace = { members = ["examples/rp2040"] }
[package]
name = "vl53l4cd"
description = "VL53L4CD ToF ranging sensor driver"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/akeamc/vl53l4cd"

[dependencies]
defmt = { version = "0.3", optional = true }
embedded-hal-async = "1.0"
futures-util = { version = "0.3", default-features = false }

[features]
defmt-03 = ["dep:defmt", "embedded-hal-async/defmt-03"]
std = []
default = ["std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
